# bloxel

./: .gitignore  LICENSE  README.md  index.html  issues.todo  notes.txt  package-lock.json  package.json
accessories/: topdf.cpp
backend/: Cargo.toml  build.rs
backend/libs/: c_statics.lib
backend/src/: board.rs  chalk.rs  duster.rs  highlight.rs  lib.rs  main.rs
c_statics/: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  main.cpp  topdf.cpp  toppt.cpp  vcpkg-configuration.json  vcpkg.json
frontend/: init_board.js  package-lock.json  package.json
frontend/src/: App.css  App.jsx  AppContext.js  Page.css  Pointer.css  Pointer.jsx  chalks.js  duster.js  padding.js  screen.js  tools.js  utils.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src/board/: Board.css  Board.jsx  methods.js
frontend/src/palette/: Palette.css  Palette.jsx
frontend/src/palette/tools/: Add.jsx  Clear.jsx  Del.jsx  Duster.jsx  Left.jsx  Next.jsx  Prev.jsx  Reset.jsx  Settings.jsx  save.jsx
frontend/src/palette/tools/Chalk/: Chalk.css  Chalk.jsx
frontend/src/palette/tools/Duster/: Duster.css  Duster.jsx
frontend/src/palette/tools/large/: Background.css  Background.jsx  Chalk.css  Chalk.jsx
src/: App.css  App.jsx  Page.css  Page.jsx  Pointer.css  Pointer.jsx  main.py  sheet.py  styles.css  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/board/: Board.jsx
src/palette/: Palette.css  Palette.jsx
src/palette/tools/: Clear.jsx  Duster.jsx  Leave.jsx  Left.jsx  Restore.jsx  Right.jsx  Settings.jsx  save.jsx
src/palette/tools/large/: Background.css  Chalk.css  Chalk.jsx  Sizes.css  Sizes.jsx
